@@ -576,6 +576,10 @@ typedef [uuid(D09B9F0E-C1AE-40dd-84D6-B1F74053AA8E)]
 		[propput, id(579), helpstring("property TableSoundVolume")] HRESULT TableSoundVolume([in] int newVal);
 		[propget, id(580), helpstring("property TableMusicVolume")] HRESULT TableMusicVolume([out, retval] int *pVal);
 		[propput, id(580), helpstring("property TableMusicVolume")] HRESULT TableMusicVolume([in] int newVal);
+		[propget, id(1700), helpstring("property BallReflection")] HRESULT BallReflection([out, retval] int *pVal);
+		[propput, id(1700), helpstring("property BallReflection")] HRESULT BallReflection([in] int newVal);
+		[propget, id(1701), helpstring("property ReflectionStength")] HRESULT ReflectionStength([out, retval] int *pVal);
+		[propput, id(1701), helpstring("property ReflectionStength")] HRESULT ReflectionStength([in] int newVal);
 		}
 
 	// Interface exposed globally to script
